Add transfer functionality and fix CORS